===============================
AFMS Release 0.x.x (2008xx-xx)
===============================

New features
~~~~~~~~~~~~
* Testcase extension: a new text field for a URL to a test script has been added

* Extended settings dialog: 
  configurable stylesheets for XML and HTML export
  and opening the default viewer after report creation

* Drag and drop support: dropping a artefact file in the tree region opens the file

* Statistics: simple artefact statistics available with menu item File/Statistics

* Recent files: list of recently opened files is now provided in File menu

* Added table formating to popup menu of multiline text controls.
  This works for HTML and REST renderers
  
* Added Indent/Unindent command to popup menu of multiline text controls.  


Changes
~~~~~~~
* Toolbar button for glossary entries replaces 'Add' button 
  below the glossary list view 
  
* HTML export now makes XHTML

* XML export format changed

* Improved display in list views for long strings with lots of tabs and newlines

* "Version" field replaced by "Key" field: for features, requirements and testcases the field "Version" has been renamed
  to "Key". When editing such an artefact the value of the key field could be selected from a drop down list.
  Rationale: some users requested a kind of grouping for artefacts. This could be done by giving same keys to artefacts belonging
  to the same group.
  Note: in the databes the version field is used to hold the key information.



===============================
AFMS Release 0.4.0 (2008-08-10)
===============================

New features
~~~~~~~~~~~~
* Artefact database may now be archived as XML files and these XML archives 
  may be converted to databases again.
  This may be done from within afeditor or using the
  standalone scripts afarchivetodb.py and afdbtoarchive.py.
  
* Multiline text strings starting with '.. HTML' followd by a blank line 
  are now rendered as HTML. 
  